Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,8 @@ variables:
   containerRegistry: 'mycontainer23registry.azurecr.io'
   dockerfilePath: '$(Build.SourcesDirectory)/Dockerfile'
   azureSubscription: 'azureSubscription'
-  containerGroupName: 'devopsSWapp'
-  containerName: 'devopsSWapp'
+  containerGroupName: 'devopsswapp'
+  containerName: 'devopsswapp'
   tag: '$(Build.BuildId)'
 
   # Agent VM image name
