--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,6 +17,7 @@ variables:
   azureSubscription: 'azureSubscription'
   containerGroupName: 'devopsswapp'
   containerName: 'devopsswapp'
+  appName: 'SW-web-AppContainer'
   tag: '$(Build.BuildId)'
 
   # Agent VM image name
@@ -38,14 +39,14 @@ stages:
         pytest test_login.py
       displayName: Run tests with Pytest
       
+
 - stage: Build
   displayName: Build and push stage
   jobs:
   - job: Build
-    displayName: Build and push Docker image
+    displayName: Build
     pool:
       vmImage: $(vmImageName)
-      parallel: 1
     steps:
     - task: Docker@2
       displayName: Build and push an image to container registry
@@ -56,35 +57,12 @@ stages:
         containerRegistry: $(dockerRegistryServiceConnection)
         tags: |
           $(tag)
-          
-    - task: AzureCLI@2
-      displayName: 'Create container group'
+
+
+    ## Add the below snippet at the end of your pipeline
+    - task: AzureWebAppContainer@1
+      displayName: 'Azure Web App on Container Deploy'
       inputs:
         azureSubscription: $(azureSubscription)
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          az container create \
-            --resource-group myResourceGroup \
-            --name $(containerGroupName) \
-            --image $(containerRegistry)/$(imageRepository):$(tag) \
-            --cpu 1 \
-            --memory 1 \
-            --ports 5000 \
-            --ip-address public \
-            --registry-login-server $(containerRegistry) \
-            --registry-username 'MyContainer23Registry' \
-            --registry-password 'jKYFAUenrzJkalDiMVZ511aFTyFc1fF5FstrRQV31k+ACRCevkos' \
-            --dns-name-label $(containerName)
-    - task: AzureCLI@2
-      displayName: 'Show container group details'
-      inputs:
-        azureSubscription: $(azureSubscription)
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          az container show \
-            --resource-group myResourceGroup \
-            --name $(containerGroupName) \
-            --query "{FQDN:ipAddress.fqdn,ProvisioningState:provisioningState}" \
-            --out table
+        appName: $(appName)
+        imageName: $(containerRegistry)/$(imageRepository):$(tag)
