--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,7 +37,7 @@ stages:
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
         pytest test_login.py
-        python -m unittest discover -v -s tests -p 'sele_test_login.py'
+        python -m unittest discover -v -s . -p 'sele_test_login.py'
       displayName: Run tests with Pytest
       
 
