--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,7 +36,7 @@ stages:
     - script: |
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
-        pytest tests
+        pytest -k "test" .
       displayName: Run tests with Pytest
       
 
