--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -85,4 +85,4 @@ stages:
       inputs:
         azureSubscription: $(azureSubscription)
         appName: $(appName)
-        imageName: $(containerRegistry)/$(imageRepository):$'125'
+        imageName: $(containerRegistry)/$(imageRepository):'125'
