--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -86,3 +86,7 @@ stages:
         azureSubscription: $(azureSubscription)
         appName: $(appName)
         imageName: $(containerRegistry)/$(imageRepository):$(tag)
+        appSettings: |
+      {
+        "DEBUG": "True"
+      }
