Update azure-pipelines.yml for Azure Pipelines untraking files

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,7 +48,7 @@ stages:
     - script: |
         python3 -m pip install --upgrade pip
         pip install -r requirements.txt
-        coverage run --source=. --omit=app.py -m pytest -k "test" .
+        coverage run --source=. --omit=app.py,get_stock_data.py -m pytest -k "test" .
         coverage report -m
         coverage xml
       displayName: Run tests with Pytest and Coverage.py
