--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -83,7 +83,7 @@ stages:
     - task: AzureWebAppContainer@1
       displayName: 'Azure Web App on Container Deploy'
       env:
-        "DEBUG": "True"
+        "DEBUG": "False"
       inputs:
         azureSubscription: $(azureSubscription)
         appName: $(appName)
